--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "css-loader": "~0.28.0",
     "del": "~2.2.0",
     "gulp": "~3.9.0",
-    "gulp-changed": "~3.1.0",
+    "gulp-changed": "^3.1.1",
     "gulp-concat": "~2.6.0",
     "gulp-cssmin": "~0.2.0",
     "gulp-htmlhint": "~0.3.0",
