--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "url": "https://github.com/jkazama/sample-ui-vue-pages.git"
   },
   "dependencies": {
-    "bootstrap-sass": "~3.3.0",
+    "bootstrap-vue": "^1.2.0",
     "co": "~4.6.0",
     "flatpickr": "~2.6.0",
     "font-awesome": "~4.7.0",
+    "gulp-sass-error": "^1.0.5",
     "jquery": "~3.2.0",
     "lodash": "~4.17.0",
     "moment": "~2.18.0",
     "superagent": "~3.5.0",
-    "vue": "~2.3.0"
+    "vue": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -33,7 +34,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-runtime": "~6.23.0",
     "bemto.pug": "^2.1.0",
+    "bootstrap": "^4.0.0-beta.2",
     "browser-sync": "~2.18.0",
+    "consolidate": "^0.15.0",
     "css-loader": "~0.28.0",
     "del": "~2.2.0",
     "gulp": "~3.9.0",
@@ -53,7 +56,8 @@
     "gulp-slash": "~1.1.0",
     "gulp-uglify": "~3.0.0",
     "html-loader": "~0.4.0",
-    "node-sass": "~4.5.0",
+    "node-sass": "^4.7.2",
+    "popper.js": "^1.12.9",
     "pug": "~2.0.0-rc.1",
     "pug-loader": "~2.3.0",
     "run-sequence": "~1.2.0",
