--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "~6.24.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "~7.0.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "babel-preset-env": "^1.6.1",
@@ -57,6 +57,7 @@
     "gulp-uglify": "~3.0.0",
     "html-loader": "~0.4.0",
     "jade-get-data": "^1.0.1",
+    "jstransformer-markdown-it": "^2.0.0",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
     "pug": "~2.0.0-rc.1",
